fix the alignment and remove second line

--- a/src/components/AdminUsersProfile/AdminUserPage.css
+++ b/src/components/AdminUsersProfile/AdminUserPage.css
@@ -193,9 +193,9 @@
   border: 1px solid #ccc;
 }
 
-.DiasbleUserContent {
+.DiasbleContent {
   display: flex;
-  align-items: center;
+  flex-direction: center;
   justify-content: space-between;
   padding-top: 10px;
 }
@@ -281,19 +281,13 @@
 }
 .SettingsSectionInfo {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  flex-direction: row;
   gap: 0.3rem;
   font-size: 0.95rem;
-  padding-top: 1rem;
-}
-.ContainerSection{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    padding: 0rem 0rem 0.5rem 0rem;
-    flex-direction: row;
-    justify-content: space-between;
-    border-bottom: 0.9px solid rgba(204, 204, 204, 0.69);
+  padding: 1rem 0rem 1rem 0rem;
+  justify-content: space-between;
+  border-bottom: 0.9px solid rgba(204, 204, 204, 0.69);
 }
 .SubTitle{
   font-size: 1.2rem;
@@ -301,4 +295,17 @@
   color: var(--primary-dark-color);
   margin: 0;
   padding-top: 1rem;
+}
+.SubTitleContent{
+  font-size: 1rem;
+  font-weight: lighter;
+}
+.SettingsSectionInfo1{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.3rem;
+  font-size: 0.95rem;
+  padding: 1rem 0rem 1rem 0rem;
+  justify-content: space-between;
 }
